index.html was edited; linked to styless.css and includes additional paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name = "viewport" content = "width=devicewidth, initial-scale = 1.0">
         <meta http-equiv = "X-UA-Compatible" content="ie=edge">
 
+        <link href = "styles.css" rel = "stylesheet" type = "text/css">
+
         <title>INFO2180 Lab 1</title>
     </head>
 
@@ -22,7 +24,12 @@
                I get overly excited about my new calculators, I think about programs I could write to make my life easier,
                and could quite literally die of laughter from a good math or programming joke. I am currently in my final
                (hopefully) year of the Actuarial Science program at the University of the West Indies, Mona Campus and am 
-               hoping to become an actuary and a data analyst.</p> 
+               hoping to become an actuary and a data analyst.</p>
+            <p>While web development is unrelated to my studies and career aspirations, I am not deterred from wanting to
+               learn something new. Whenever I scroll the websites for tech companies like Apple and Samsung, I'm always 
+               amazed by how interactive and immersive the pages are. I almsot instinctively start to think about the 
+               programming behind the visual effects, and I hope to be exposed to the like in this course. My intention is 
+               not to start freelancing, but who knows what the future holds....</p>
         </main>
 
         <footer>
