index.html was edited; includes link to joke.png

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                amazed by how interactive and immersive the pages are. I almsot instinctively start to think about the 
                programming behind the visual effects, and I hope to be exposed to the like in this course. My intention is 
                not to start freelancing, but who knows what the future holds....</p>
+            <p>I thought I'd share a laugh:</p>
+            <img src = "joke.jpg" alt = "CSS Joke">
         </main>
 
         <footer>
